# tdms-rs

./: .gitignore  Cargo.toml  README.md  TDMS_SPEC.md  readtest.py  run_nptdms_tests.bat  rustfmt.toml
benches/: write_benchmark.rs
examples/: async_multithread.rs  basic_write.rs
python/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
python/examples/: basic_example.py  waveform_examples.py
python/py/tdms/: __init__.py  tdms.py
python/src/: lib.rs
python/tests/: test_async_writer.py  test_basic.py  test_complex_data.py  test_data_integrity.py  test_streaming.py  test_write_benchmark.py
src/: error.rs  lib.rs  types.rs
src/metadata/: channel_metadata.rs  mod.rs  object_path.rs  raw_data_index.rs
src/raw_data/: buffer.rs  mod.rs  reader.rs
src/reader/: channel_reader.rs  daqmx.rs  mod.rs  streaming.rs  sync_reader.rs
src/segment/: header.rs  info.rs  mod.rs
src/utils/: endian.rs  mod.rs  string_encoding.rs
src/writer/: async_writer.rs  mod.rs  rotating_async_writer.rs  rotating_writer.rs  sync_writer.rs
tests/: daqmx_read_test.rs  defragment_test.rs  incremental_metadata_tests.rs  integration_tests.rs  nptdms_compatibility_tests.rs  rotating_writer.rs  streaming_reader_tests.rs  stress_test.rs  test_rotating_handlers.rs  timestamp_tests.rs  validate_with_nptdms.py  verify_nptdms.py  verify_nptdms_first_half.py  writer_tests.rs
