[package]
name = "tdms-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance TDMS (Technical Data Management Streaming) file format library"
repository = "https://github.com/yourusername/tdms-rs"
documentation = "https://docs.rs/tdms-rs"
readme = "README.md"
keywords = ["tdms", "labview", "national-instruments", "data-acquisition", "streaming"]
categories = ["encoding", "filesystem", "science"]

[dependencies]
bytes = "1.5"
tokio = { version = "1.35", features = ["full"], optional = true }
memmap2 = { version = "0.9", optional = true }
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "1.0"
byteorder = "1.5"
smallvec = "1.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
tokio = { version = "1.35", features = ["full", "test-util"] }
chrono = "0.4"

[features]
default = ["async"]
async = ["tokio"]
mmap = ["memmap2"]
bench = []
all = ["async", "mmap"]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[test]]
name = "timestamp_tests"
path = "tests/timestamp_tests.rs"